--- a/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1 class="mt-5">Növények részletes bemutatása</h1>
 
 <h2>Fák</h2>
@@ -5,13 +7,13 @@
   <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
     <div class="col" *ngFor="let plant of trees">
       <div class="card h-100 shadow hovered">
-                  <a routerLink="/plant/{{ plant._id }}">
-            <img [src]="plant.image[0]" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h6 class="card-title fw-bold">{{ plant.name }}</h6>
-            </div>
-          </a>
-        </div>
+        <a routerLink="/plant/{{ plant._id }}">
+          <img [src]="plant.image[0]" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h6 class="card-title fw-bold">{{ plant.name }}</h6>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
 </div>
@@ -46,4 +48,6 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
