--- a/phenology-frontend/src/app/page/guide/guide.component.html
+++ b/phenology-frontend/src/app/page/guide/guide.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1>Útmutató növényfenológiai megfigyelésekre</h1>
 
 <h5>A fenológiai megfigyelések jelentősége</h5>
@@ -138,3 +140,5 @@
 </p>
 
 <a [routerLink]="'/plant'" class="card-link">Növények részletes bemutatása</a>
+
+</div>
