--- a/phenology-frontend/src/app/app.component.html
+++ b/phenology-frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 
 <app-navigation></app-navigation>
 
-<div class="container">
+<div class="container-fluid p-0">
   <div class="row">
-    <div class="col-12 col-md-10 offset-md-1">
+    <div class="col-12">
       <router-outlet></router-outlet>
     </div>
   </div>
