--- a/phenology-frontend/src/app/page/history/history.component.scss
+++ b/phenology-frontend/src/app/page/history/history.component.scss
@@ -1,5 +1,6 @@
 .fixed-bg {
-  background-image: url("https://cdn.pixabay.com/photo/2020/01/26/11/46/paper-flower-background-4794429_960_720.jpg");
+  background-image: url("../../../assets/image/aranyfa_1.gif");
+  //url("https://cdn.pixabay.com/photo/2020/01/26/11/46/paper-flower-background-4794429_960_720.jpg");
   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
