--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -68,6 +68,11 @@
                 >
               </li>
               <li>
+                <a class="dropdown-item text-white" routerLink="/challenge"
+                  >A kihívás</a
+                >
+              </li>
+              <li>
                 <a class="dropdown-item text-white" routerLink="/guide"
                   >Megfigyelési útmutató</a
                 >
