--- a/phenology-frontend/src/app/page/challenge/challenge.component.html
+++ b/phenology-frontend/src/app/page/challenge/challenge.component.html
@@ -1,45 +1,54 @@
-<h1>Önkénteseket keresünk!</h1>
+<div class="m-5">
 
-<h3>Csatlakozz hozzánk!</h3>
-
-<h4>Mit kellene tenni?</h4>
-
-<p>
-  A feladat nagyon egyszerű, figyelni kell, hogy egy-egy növény pl. mikor kezd
-  virágozni, mikor lombosodik, mikor kezd ősszel hullani a levele, és azt itt
-  egy rövid regisztráció után rögzíteni. Nem kell mindenféle növényt
-  folyamatosan figyelni, ha valaki csak egy növényfaj egy fejlődési fázisának
-  kezdetét tudja megfigyelni, az is nagyon jó. Rajtunk múlik: amennyire
-  lehetőségünk van, amennyit időnk, energiánk enged. Ha ma nem figyeljük és
-  mérjük meg a környezetünk állapotát (pl. időjárást, növényeket), valamint azt
-  nem dokumentáljuk, akkor azt a jövőben már soha senki nem fogja tudni
-  megmérni, megfigyelni.
-</p>
-
-<h4>Mi értelme van ennek?</h4>
-
-<p>
-  A növényfenológia a növények környezeti viszonyoktól függő, szabályszerű
-  egymásutánban bekövetkező jelenségeinek (rügyfakadás, virágzás, stb.)
-  vizsgálatával foglalkozó tudomány. A vadnövények és a táplálékunkként szolgáló
-  kultúrnövényeink fejlődési fázisait az időjárás döntő mértékben befolyásolja.
-  Mivel az időjárás évről-évre másként alakul, a növények is évről-évre más
-  időpontban érik el az egyes fejlettségi állapotaikat. A hosszú, évtizedekre
-  szóló vadnövény fenológiai adatsorok az éghajlat és az éghajlat-változás
-  szempontjából rendkívül fontosak, hiszen a növények fejlődési stádiumai az
-  éghajat változásával eltolódnak, azt nyomjelzőként mutatják. Ezért a
-  növényfenológiai megfigyeléseknek óriási jelentősége van.
-  <a [routerLink]="'/history'" class="card-link">Bővebben</a>
-</p>
+  <div class="fixed-bg">
+    <h1 class="p-3 text-light text-end fw-bold">Önkénteseket keresünk!</h1>
+  </div>
 
 
-<p>
-  Az
-  <a routerLink="/guide" class="link text-blue">útmutatóban</a>
-   részletes leírás található a megfigyelések technikájáról, és
-   segítjük a
-   <a routerLink="/plant" class="link text-blue">növények</a>
-   és fenológiai fázisainak beazonosítását is.
-</p>
+  <h3>Csatlakozz hozzánk!</h3>
 
-<p>Közreműködését mindenkinek előre is köszönjük!</p>
+  <h4>Mit kellene tenni?</h4>
+
+  <p>
+    A feladat nagyon egyszerű, figyelni kell, hogy egy-egy növény pl. mikor kezd
+    virágozni, mikor lombosodik, mikor kezd ősszel hullani a levele, és azt itt
+    egy rövid regisztráció után rögzíteni. Nem kell mindenféle növényt
+    folyamatosan figyelni, ha valaki csak egy növényfaj egy fejlődési fázisának
+    kezdetét tudja megfigyelni, az is nagyon jó. Rajtunk múlik: amennyire
+    lehetőségünk van, amennyit időnk, energiánk enged. Ha ma nem figyeljük és
+    mérjük meg a környezetünk állapotát (pl. időjárást, növényeket), valamint
+    azt nem dokumentáljuk, akkor azt a jövőben már soha senki nem fogja tudni
+    megmérni, megfigyelni.
+  </p>
+
+  <h4>Mi értelme van ennek?</h4>
+
+  <p>
+    A növényfenológia a növények környezeti viszonyoktól függő, szabályszerű
+    egymásutánban bekövetkező jelenségeinek (rügyfakadás, virágzás, stb.)
+    vizsgálatával foglalkozó tudomány. A vadnövények és a táplálékunkként
+    szolgáló kultúrnövényeink fejlődési fázisait az időjárás döntő mértékben
+    befolyásolja. Mivel az időjárás évről-évre másként alakul, a növények is
+    évről-évre más időpontban érik el az egyes fejlettségi állapotaikat. A
+    hosszú, évtizedekre szóló vadnövény fenológiai adatsorok az éghajlat és az
+    éghajlat-változás szempontjából rendkívül fontosak, hiszen a növények
+    fejlődési stádiumai az éghajat változásával eltolódnak, azt nyomjelzőként
+    mutatják. Ezért a növényfenológiai megfigyeléseknek óriási jelentősége van.
+    <a [routerLink]="'/history'" class="card-link">Bővebben</a>
+  </p>
+
+  <p>
+    Az
+    <a routerLink="/guide" class="link text-blue">útmutatóban</a>
+    részletes leírás található a megfigyelések technikájáról, és segítjük a
+    <a routerLink="/plant" class="link text-blue">növények</a>
+    és fenológiai fázisainak beazonosítását is.
+  </p>
+
+  <h4>
+    Megfigyeléseiddel bővítsd te is hazánk fenológiai adatsorát, nemzeti
+    vagyonunkat!
+  </h4>
+
+  <h4>Közreműködését mindenkinek előre is köszönjük!</h4>
+</div>
