--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -9,7 +9,7 @@
   <div class="col ps-4">
     <div class="card h-100" class="shadow bg-body rounded">
       <img
-        src="../../../assets/image/bimbó.jpg"
+        src="../../../assets/image/gyongyvirag.jpg"
         class="card-img-top"
         alt="..."
       />
@@ -35,7 +35,7 @@
   <div class="col px-4">
     <div class="card h-100" class="shadow bg-body rounded">
       <img
-        src="../../../assets/image/virag.jpg"
+        src="../../../assets/image/megfigyelok.jpg"
         class="card-img-top"
         alt="..."
       />
